--- a/src/components/App.css
+++ b/src/components/App.css
@@ -871,6 +871,9 @@ footer #donate,
    .App.home.khmer.static section.orange-gradient > div > div { width:calc(30vw + 130px + 30px); }
    .App.home.khmer.static section.orange-gradient > div > div > div { width:30vw;}
    .App.home.khmer.static section.orange-gradient > div > div > div span { letter-spacing: 0; font-size:17px; }
+
+   .resource .data + .data.open-etext { padding-left:0; padding-bottom:0 !important;  }
+
 }
 
 
@@ -895,6 +898,7 @@ footer #donate,
    .App.home.khmer.static section.orange-gradient > div > div > div { width:37.5vw;}
 
    .App.home.khmer.static h1 { font-size:38px; line-height: 40px;}
+
 }
 
 @media(max-width:800px) {
@@ -1120,6 +1124,8 @@ a.result .contenu ul > div:last-child h3:is([lang$="-khmr"],[lang="km"]) { font-
    .App.browse.khmer .SearchPane > div > div #samples {
       padding-right:40px;
    }
+
+   
 }
 
 
@@ -2986,7 +2992,7 @@ body > [id^="menu-"] > div:last-child,
    background-color: black;
 }
 .resource .data [data-prop="bdo:workHasInstance"] .images-thumb { width:100px;height:100px;z-index:1;position:relative;}
-.resource .data [data-prop="bdo:workHasInstance"] .images-thumb-links { margin-left:10px;}
+.resource .data [data-prop="bdo:workHasInstance"] .images-thumb-links { margin-left:0px;}
 
 .resource .data [data-prop="bdo:workHasInstance"] .images-thumb-links ~ .provider { display:none;  }
 
@@ -4880,6 +4886,21 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
    }
 }
 
+
+
+@media(max-width:1280px) {
+
+
+   .resource .data.etext-title { flex-wrap:wrap; }
+
+   /*
+   .resource .data h2.intro + h2 span {
+      max-width: none;
+      white-space: break-spaces;
+   }
+   */
+}
+
 @media (max-width:1200px)
 {
    
@@ -4892,6 +4913,8 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
 }
 
 #settings { display:none; }
+
+
 
 @media (max-width:1024px)
 {
@@ -4961,6 +4984,8 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
    footer#site-footer > div.foot #t2 { padding-left:150px;}
    footer#site-footer > div.foot #donate { margin-left:20px; float:none;}
    */
+
+   
 }
 
 
@@ -5377,9 +5402,12 @@ a.result + #matches.mobile,
   .resource .data .firstImage { height:60vh; min-width:0vw; position:relative; }
   .resource .data .firstImage img { max-height:100%; max-width:100%;}
 
-  .resource .data h2.intro + h2 span { max-width: 80vw; }
+  .resource .data h2.intro + h2 span { max-width: calc(100%); }
 
   .resource .data h2.on + h3 { padding-left:20px; }
+
+
+
 }
 
 
@@ -5422,6 +5450,10 @@ a.result + #matches.mobile,
    }
 
    .mirador-container .X { margin-left:24px; }
+
+
+   .resource .data.related .react-tabs__tab-list { flex-wrap: wrap;  margin-bottom: 20px; }
+   .resource .data.related .react-tabs__tab-list > li { width:100%; }
 }
 
 .not-logged svg,
@@ -5697,6 +5729,13 @@ a.result + #matches.mobile,
    #etext-scroll h3:nth-child(2) { flex-shrink:1; text-align: center !important; padding:0 10px;}
 
    .nav #back { max-width:calc(100% - 200px); }
+
+   .resource .data#head,
+   .resource .title { order:-1; }
+   #root > div > .resource.etext > .index + div { display:flex;  flex-direction: column; }
+   .resource .data.etext-title { padding-right:15px; order:-1; padding-bottom:10px !important; }
+   .resource .data + .data.open-etext { position: relative; padding-left:35px; order:0; padding-bottom:50px !important; z-index:0; }
+
 }
 
 
@@ -5710,6 +5749,8 @@ a.result + #matches.mobile,
 
 
    #popDL.print > div { max-width:80vw;width:80vw; }
+
+
    
 }
 
@@ -5843,6 +5884,11 @@ a.result + #matches.mobile,
    #etext-nav { padding:0 30px 0 20px; }
 
    .nav #back { max-width:calc(100% - 130px); }
+
+
+
+   .resource .data.related > div div.rel-or-crea > div {   width: calc((100vw - 40px - 30px - 20px - 50px)/2); }
+   .resource .data.related > div div.rel-or-crea > div .header { height: calc((100vw - 40px - 30px - 20px - 50px)/2); }
 }
 
 @media (max-width:375px)
@@ -5884,6 +5930,10 @@ a.result + #matches.mobile,
 
 
    #etext-nav a#DL img { margin-right:10px; }
+
+
+   .resource .data.related > div div.rel-or-crea > div {   width: calc((100vw - 40px - 30px - 20px - 30px)/1); }
+   .resource .data.related > div div.rel-or-crea > div .header { height: calc((100vw - 40px - 30px - 20px - 30px)/1); }
 }
 
 @media only screen and (orientation:portrait) and (max-device-width:767px) and (max-width:480px) {
